--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
       <div class="card-content">
         <div class="input-group">
           <label for="diameter">Diameter Silinder (mm)</label>
-          <input type="number" id="diameter" placeholder="Contoh: 55">
+          <input type="number" id="diameter" placeholder="Contoh: 50">
         </div>
         <div class="input-group">
           <label for="tinggi">Tinggi/Stroke Silinder (mm)</label>
-          <input type="number" id="tinggi" placeholder="Contoh: 57">
+          <input type="number" id="tinggi" placeholder="Contoh: 56">
         </div>
         <div class="input-group">
           <label for="jumlahSilinder">Jumlah Silinder</label>
@@ -220,7 +220,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 Kalkulator CC Motor. Dibuat dengan 💙 oleh <a href="#">Tim Anda</a>.</p>
+    <p>&copy; 2024 Kalkulator CC Motor. Dibuat dengan 💙 oleh <a href="https://wa.me/6283856085455">Codespecter55</a>.</p>
   </footer>
 
   <script>
